# double-shared-library-conan

./: CMakeLists.txt  README.md  conanfile.py  main.cpp
pkg1/: lib1.cpp  lib1.hpp
pkg2/: lib2.cpp  lib2.hpp
test_package/: CMakeLists.txt  conanfile.py  test_pkg1.cpp  test_pkg2.cpp
